--- a/application/core/build.gradle
+++ b/application/core/build.gradle
@@ -3,17 +3,13 @@ plugins {
 }
 
 group 'rvz.dev'
-version '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
 
-test {
-    useJUnitPlatform()
 }
