--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -5,7 +5,6 @@ plugins {
 }
 
 group 'rvz.dev'
-version '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
@@ -21,4 +20,8 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+allprojects {
+    version = '0.0.1-SNAPSHOT'
 }
