--- a/adapters/inbound/build.gradle
+++ b/adapters/inbound/build.gradle
@@ -7,10 +7,10 @@ plugins {
 }
 
 group 'rvz.dev'
-version '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
