--- a/application/portin/build.gradle
+++ b/application/portin/build.gradle
@@ -3,9 +3,10 @@ plugins {
 }
 
 group 'rvz.dev'
-version '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
