--- a/adapters/build.gradle
+++ b/adapters/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group 'rvz.dev'
+group 'dev.rvz'
 sourceCompatibility = '17'
 
 repositories {
@@ -21,10 +21,9 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation project('configurations')
-    implementation project('inbound')
-    implementation project('outbound')
-    implementation project(':application')
+    implementation project(':application:core')
+    implementation project(':application:portin')
+    implementation project(':application:portout')
     implementation 'org.flywaydb:flyway-core'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
