--- a/adapters/outbound/build.gradle
+++ b/adapters/outbound/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group 'rvz.dev'
+group 'dev.rvz'
 sourceCompatibility = '17'
 
 repositories {
