--- a/adapters/commons/build.gradle
+++ b/adapters/commons/build.gradle
@@ -19,8 +19,9 @@ dependencyManagement {
         mavenBom SpringBootPlugin.BOM_COORDINATES
     }
 }
+
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation project(':application')
-    implementation project(':portout')
+    implementation project(':core')
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
