--- a/adapters/inbound/build.gradle
+++ b/adapters/inbound/build.gradle
@@ -23,4 +23,7 @@ dependencyManagement {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation project(':portin')
+    implementation project(':adapters:commons')
+    implementation project(':core')
 }
