--- a/adapters/outbound/build.gradle
+++ b/adapters/outbound/build.gradle
@@ -21,5 +21,8 @@ dependencyManagement {
 }
 
 dependencies {
-
+    implementation project(':core')
+    implementation project(':portout')
+    implementation project(':adapters:commons')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
