--- a/application/build.gradle
+++ b/application/build.gradle
@@ -14,4 +14,13 @@ dependencies {
     implementation project(':portin')
     implementation project(':portout')
     implementation project(':core')
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+    testImplementation 'org.mockito:mockito-core:4.10.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.10.0'
+
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
