--- a/adapters/configurations/build.gradle
+++ b/adapters/configurations/build.gradle
@@ -21,6 +21,8 @@ dependencyManagement {
 }
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation project(':application')
+    implementation project(':core')
     implementation project(':portout')
 }
