--- a/adapters/outbound/build.gradle
+++ b/adapters/outbound/build.gradle
@@ -25,4 +25,9 @@ dependencies {
     implementation project(':portout')
     implementation project(':adapters:commons')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
