--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,23 +1,29 @@
 name: CI
+
 on:
   push:
     branches:
-      - '*'
+      - develop
+      - main
+
 jobs:
-  in-docker_test:
-    name: Testes automatizados
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Set JDK
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
-
-      - name: Cache de dependencias
-        uses: actions/cache@v1
-
-      - name: Executar os testes
-        run: mvn -B test
+          java-version: '19'
+          distribution: 'adopt'
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: -b ci.gradle package
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Package
+          path: build/libs
