--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK 19
         uses: actions/setup-java@v3
         with:
           java-version: '19'
@@ -22,8 +22,6 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
-          arguments: -b ci.gradle package
-      - uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: build/libs
+          arguments: build
+    steps:
+      - run: gradle tests
