--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,5 +23,5 @@ jobs:
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
-    steps:
-      - run: gradle tests
+      - name: execute tests untis
+        run: gradle test
