--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -17,11 +17,7 @@ jobs:
         with:
           java-version: '19'
           distribution: 'adopt'
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        with:
-          arguments: build
+      - name: build application
+        run: ./gradlew build
       - name: execute tests untis
-        run: gradle test
+        run: ./gradlew test
