--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.0'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'jacoco'
 }
 
 group 'dev.rvz'
@@ -35,4 +36,12 @@ tasks.named('test') {
 
 allprojects {
     version = '0.0.1-SNAPSHOT'
+}
+
+test {
+    finalizedBy(jacocoTestReport)
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
 }
