--- a/adapters/inbound/build.gradle
+++ b/adapters/inbound/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.0' apply false
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'jacoco'
+    id 'jacoco-report-aggregation'
 }
 
 group 'dev.rvz'
@@ -26,4 +28,17 @@ dependencies {
     implementation project(':portin')
     implementation project(':adapters:commons')
     implementation project(':core')
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+    finalizedBy(jacocoTestReport)
+}
+
+tasks.named('check') {
+    dependsOn(tasks.named('testCodeCoverageReport', JacocoReport))
+}
+
+jacocoTestReport {
+    dependsOn test
 }
