--- a/adapters/outbound/build.gradle
+++ b/adapters/outbound/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.0' apply false
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'jacoco'
+    id 'jacoco-report-aggregation'
 }
 
 group 'dev.rvz'
@@ -30,4 +32,13 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy(jacocoTestReport)
+}
+
+tasks.named('check') {
+    dependsOn(tasks.named('testCodeCoverageReport', JacocoReport))
+}
+
+jacocoTestReport {
+    dependsOn test
 }
