--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'jacoco'
+    id 'jacoco-report-aggregation'
 }
 
 group 'dev.rvz'
@@ -21,6 +23,16 @@ dependencies {
 
 }
 
+
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy(jacocoTestReport)
+}
+
+tasks.named('check') {
+    dependsOn(tasks.named('testCodeCoverageReport', JacocoReport))
+}
+
+jacocoTestReport {
+    dependsOn test
 }
