--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'jacoco'
+    id 'jacoco-report-aggregation'
 }
 
 group 'dev.rvz'
@@ -7,4 +9,17 @@ sourceCompatibility = '19'
 
 repositories {
     mavenCentral()
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+    finalizedBy(jacocoTestReport)
+}
+
+tasks.named('check') {
+    dependsOn(tasks.named('testCodeCoverageReport', JacocoReport))
+}
+
+jacocoTestReport {
+    dependsOn test
 }
