--- a/adapters/outbound/build.gradle
+++ b/adapters/outbound/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation project(':adapters:commons')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
