Create controller update complete

--- a/adapters/configurations/build.gradle
+++ b/adapters/configurations/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation project(':application')
     implementation project(':core')
     implementation project(':portout')
+    implementation project(':portin')
 }
