--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -16,10 +16,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     runtimeOnly 'org.postgresql:postgresql'
     implementation 'org.flywaydb:flyway-core'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation project(':adapters:configurations')
     implementation project(':adapters:commons')
     implementation project(':adapters:inbound')
