--- a/adapters/configurations/build.gradle
+++ b/adapters/configurations/build.gradle
@@ -22,6 +22,9 @@ dependencyManagement {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     implementation project(':application')
     implementation project(':core')
     implementation project(':portout')
