--- a/adapters/commons/build.gradle
+++ b/adapters/commons/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     implementation project(':core')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
