--- a/adapters/configurations/build.gradle
+++ b/adapters/configurations/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     implementation project(':application')
+    implementation project(':adapters:outbound')
     implementation project(':core')
     implementation project(':portout')
     implementation project(':portin')
