--- a/adapters/configurations/build.gradle
+++ b/adapters/configurations/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'com.auth0:java-jwt:4.2.2'
     implementation project(':application')
     implementation project(':adapters:outbound')
     implementation project(':core')
