configurate security with token

--- a/framework/src/main/resources/application-dev.properties
+++ b/framework/src/main/resources/application-dev.properties
@@ -2,3 +2,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/box_videos
 spring.datasource.username=box_videos
 spring.datasource.password=${PASSWORD_BD_DEV}
+jwt.secret.key=7D2BDF3E3D6E88EC63B55652575DF
+# um dia
+jwt.time.expiration=86400000
